improved accessibility home component

--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -48,7 +48,9 @@
                         <button type="submit"
                                 class="btn btn-success"
                                 i18n-title
-                                title="PIN absenden">
+                                title="PIN absenden"
+                                aria-label="PIN absenden"
+                                i18n-aria-label>
                             <svg width="1.5em"
                                  height="1.5em"
                                  viewBox="0 0 16 16"
@@ -60,8 +62,6 @@
                                 <path
                                       d="M11.596 8.697l-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
                             </svg>
-                            <span class="sr-only"
-                                  i18n>PIN absenden</span>
                         </button>
                     </form>
                 </div>
