--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -39,7 +39,8 @@
         </div>
 
         <div class="card-body table-responsive p-0">
-            <table class="table table-hover m-0">
+            <table class="table table-hover m-0"
+                    tabindex="0">
                 <thead>
                     <tr>
                         <th scope="col"
