--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <!-- tasks list -->
     <div class="card bg-light mb-1 mb-lg-3"
          *ngIf="data.tasks">
-        <h5 class="card-header">
+        <div class="card-header h5">
             <svg width="1em"
                  height="1em"
                  viewBox="0 0 16 16"
@@ -36,7 +36,7 @@
                     </select>
                 </div>
             </div>
-        </h5>
+        </div>
 
         <div class="card-body table-responsive p-0">
             <table class="table table-hover m-0">
