--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -76,7 +76,6 @@
                            #pin>
 
                     <button type="submit"
-                            role="button"
                             class="btn btn-success"
                             i18n-title
                             title="Absenden">
@@ -102,7 +101,7 @@
 <section class="container-xl mt-5">
     <div class="row jumbotron mb-0">
         <div class="col-lg-12">
-            <h2 id=news
+            <h2 id="news"
                 aria-label="News">
                 <svg width="1em"
                      height="1em"
@@ -117,6 +116,7 @@
                     <path fill-rule="evenodd"
                           d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8zm0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5z" />
                 </svg>
+                <span>News</span>
             </h2>
             <hr class="my-4">
         </div>
