--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-header">
         <div class="row">
-            <h5 class="col-md-5 mb-0"><b i18n>Bodenrichtwertzone</b></h5>
+            <h5 class="col-md-5 mb-0"><b>{{brzStrings.brz | hyphenate}}</b></h5>
             <h5 class="col-md-7 mb-0">{{feature.properties.brzname | umlautCorrection}} {{feature.properties.wnum}}</h5>
         </div>
     </div>
